Paginas passadas no validator e adicionado a pagina de login

--- a/ProjetoIntegrador/6-feed.html
+++ b/ProjetoIntegrador/6-feed.html
@@ -31,10 +31,10 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light mb-3 nav-top ">
         <div class="container">
-          <!-- <div class="img-size">
-            <a class="navbar-brand" href="/6-feed.html" ><img src="/logo.png" style="height: 150px;
-              width: 150px;"></a>
-          </div> -->
+          <div class="img-size">
+            <a class="navbar-brand" href="/6-feed.html" ><img src="/ProjetoIntegrador-FATEC/ProjetoIntegrador/logo.png" alt="imagem do logo" style="height: 100px;
+              width: 100px;"></a>
+          </div>
             <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-expanded="false">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -86,7 +86,7 @@
 
           <div class="card bg-black-50 border-success mb-3" style="max-width: 100%;">
             <div class="card-header bg-transparent border-black-50">
-              <img class="img-nav img-responsive" src="./imagens/perfil.jpeg" style="width: 100px;"> zequinha_123
+              <img class="img-nav img-responsive" src="./imagens/perfil.jpeg" alt="Imagem exemplo de perfil" style="width: 100px;"> zequinha_123
             </div>
             <div class="card-body text-success" style="max-width: 100%;">
               <h5 class="card-title" style="color: black;">
@@ -116,7 +116,7 @@
 
           <div class="card border-success mb-3" style="max-width: 100%;">
             <div class="card-header bg-transparent border-black-50">
-              <img class="img-nav" src="./imagens/perfil.jpeg" style="width: 100px;"> zequinha_123
+              <img class="img-nav" src="./imagens/perfil.jpeg" alt="Foto exemplo de perfil" style="width: 100px;"> zequinha_123
             </div>
             <div class="card-body text-success border-black-50" style="max-width: 100%;">
               <h5 class="card-title" style="color: black;">
@@ -143,7 +143,7 @@
           <div class="card border-success mb-3 caio" style="max-width: 100%;">
             <div class="card-header bg-transparent border-black-50">
 
-              <img class="img-nav" src="./imagens/perfil.jpeg" style="width: 100px;"> zequinha_123
+              <img class="img-nav" src="./imagens/perfil.jpeg" alt="Foto exemplo de perfil" style="width: 100px;"> zequinha_123
             </div>
             <div class="card-body text-success" style="max-width: 100%;">
               <h5 class="card-title" style="color: black;">
@@ -172,7 +172,7 @@
           <div class="card border-success mb-3 caio" style="max-width: 100%;">
             <div class="card-header bg-transparent border-black-50">
 
-              <img class="img-nav" src="./imagens/perfil.jpeg" style="width: 100px;"> zequinha_123
+              <img class="img-nav" src="./imagens/perfil.jpeg" alt="Foto exemplo de perfil" style="width: 100px;"> zequinha_123
             </div>
             <div class="card-body text-success" style="max-width: 100%;">
               <h5 class="card-title" style="color: black;">
@@ -199,7 +199,7 @@
           <div class="card border-success mb-3 caio" style="max-width: 100%;">
             <div class="card-header bg-transparent border-black-50">
 
-              <img class="img-nav" src="./imagens/perfil.jpeg" style="width: 100px;"> zequinha_123
+              <img class="img-nav" src="./imagens/perfil.jpeg" alt="Foto exemplo de perfil" style="width: 100px;"> zequinha_123
             </div>
             <div class="card-body text-success" style="max-width: 100%;">
               <h5 class="card-title" style="color: black;">
@@ -227,7 +227,7 @@
           <div class="card border-success mb-3 caio" style="max-width: 100%;">
             <div class="card-header bg-transparent border-black-50">
 
-              <img class="img-nav" src="./imagens/perfil.jpeg" style="width: 100px;"> zequinha_123
+              <img class="img-nav" src="./imagens/perfil.jpeg" alt="Foto exemplo de perfil" style="width: 100px;"> zequinha_123
             </div>
             <div class="card-body text-success" style="max-width: 100%;">
               <h5 class="card-title" style="color: black;">
@@ -255,7 +255,7 @@
           <div class="card border-success mb-3 caio" style="max-width: 100%;">
             <div class="card-header bg-transparent border-black-50">
 
-              <img class="img-nav" src="./imagens/perfil.jpeg" style="width: 100px;"> zequinha_123
+              <img class="img-nav" src="./imagens/perfil.jpeg" alt="Foto exemplo de perfil" style="width: 100px;"> zequinha_123
             </div>
             <div class="card-body text-success" style="max-width: 100%;">
               <h5 class="card-title" style="color: black;">
@@ -297,7 +297,7 @@
           d="M17.79 10.132a.659.659 0 0 0-.962-.873l-2.556 2.05a.63.63 0 0 1-.758.002L11.06 9.47a1.576 1.576 0 0 0-2.277.42l-2.567 3.98a.659.659 0 0 0 .961.875l2.556-2.049a.63.63 0 0 1 .759-.002l2.452 1.84a1.576 1.576 0 0 0 2.278-.42Z"
           fill-rule="evenodd"></path>
       </svg>
-      <a href="#"><svg color="red" aria-label="Nova publicação" class="_ab6-" color="#262626"
+      <a href="#"><svg color="red" aria-label="Nova publicação" class="_ab6-" 
           fill="#262626" height="24" role="img" viewBox="0 0 24 24" width="24">
           <path
             d="M2 12v3.45c0 2.849.698 4.005 1.606 4.944.94.909 2.098 1.608 4.946 1.608h6.896c2.848 0 4.006-.7 4.946-1.608C21.302 19.455 22 18.3 22 15.45V8.552c0-2.849-.698-4.006-1.606-4.945C19.454 2.7 18.296 2 15.448 2H8.552c-2.848 0-4.006.699-4.946 1.607C2.698 4.547 2 5.703 2 8.552Z"
@@ -307,7 +307,7 @@
           <line fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
             x1="12.003" x2="12.003" y1="6.545" y2="17.455"></line>
         </svg></a>
-      <a href="7-perfil.html"><img class="img-nav" src="imagens/perfil.jpeg" style="width: 60px;"></a>
+      <a href="7-perfil.html"><img class="img-nav" src="imagens/perfil.jpeg" alt="Foto exemplo de perfil" style="width: 60px;"></a>
 
     </footer>
   </div>
