--- a/ProjetoIntegrador/9-Esqueceusenha.html
+++ b/ProjetoIntegrador/9-Esqueceusenha.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Rango Top</title>
-    <link rel="stylesheet" href="/CSS/style.css" />
+    <link rel="stylesheet" href="/CSS/style.css" >
     <script src="JS/cliente.js"></script>
   </head>
   <body id="body-9">
@@ -15,7 +15,7 @@
           src="logo.png"
           alt="Logo da empresa RangoTop"
           style="height: 300px"
-      /></a>
+      ></a>
     </header>
     <a href="1-login.html"></a>
     <div class="container3">
@@ -33,7 +33,7 @@
               id="email"
               name="email"
               placeholder="Zequinha@gmail.com"
-            />
+            >
           </div>
           <button type="submit" class="submit1">
             Enviar
