--- a/ProjetoIntegrador/base.html
+++ b/ProjetoIntegrador/base.html
@@ -1,50 +1,50 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1" >
     <link
       rel="apple-touch-icon"
       sizes="180x180"
       href="img/apple-icon-180x180.png"
-    />
+    >
     <link
       rel="icon"
       type="image/png"
       sizes="192x192"
       href="img/android-icon-192x192.png"
-    />
+    >
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="img/favicon-32x32.png"
-    />
+    >
     <link
       rel="icon"
       type="image/png"
       sizes="96x96"
       href="img/favicon-96x96.png"
-    />
+    >
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
       href="img/favicon-16x16.png"
-    />
-    <link rel="manifest" href="img/manifest.json" />
-    <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta name="msapplication-TileImage" content="/img/ms-icon-144x144.png" />
-    <meta name="theme-color" content="#ffffff" />
+    >
+    <link rel="manifest" href="img/manifest.json" >
+    <meta name="msapplication-TileColor" content="#ffffff" >
+    <meta name="msapplication-TileImage" content="/img/ms-icon-144x144.png" >
+    <meta name="theme-color" content="#ffffff" >
     <link
       rel="stylesheet"
       href="node_modules/bootstrap/dist/css/bootstrap.min.css"
-    />
+    >
     <link
       rel="stylesheet"
       href="node_modules/bootstrap-icons/font/bootstrap-icons.css"
-    />
-    <link rel="stylesheet" href="CSS/lucas.css" />
+    >
+    <link rel="stylesheet" href="CSS/lucas.css" >
     <title>Top Burguer</title>
     <style>
       body {
@@ -118,25 +118,25 @@
         <div class="container">
           <div class="row py-3">
             <div class="col-12 col-md-4 text-center">
-              &copy; 2022 - Top Burguer Ltda ME <br />
-              Rua Morpheus, 42, Nabucodonosor/Zion <br />
+              &copy; 2022 - Top Burguer Ltda ME <br>
+              Rua Morpheus, 42, Nabucodonosor/Zion <br>
               CNPJ 42.424.242/4242-42
             </div>
             <div class="col-12 col-md-4 text-center">
               <a href="#" class="text-decoration-none text-dark"
                 >Polítca de Privacidade</a
-              ><br />
+              ><br>
               <a href="#" class="text-decoration-none text-dark"
                 >Termos de uso</a
-              ><br />
+              ><br>
               <a href="quemsomos.html" class="text-decoration-none text-dark"
                 >Quem Somos</a
-              ><br />
+              ><br>
             </div>
             <div class="col-12 col-md-4 text-center">
               <a href="#" class="text-decoration-none text-dark">
                 Contato pelo site </a
-              ><br />
+              ><br>
               E-mail:
               <a
                 href="mailto:email@dominio.com"
