--- a/ProjetoIntegrador/produto.html
+++ b/ProjetoIntegrador/produto.html
@@ -81,7 +81,7 @@
             <div class="container">
                 <div class="row g-3">
                     <div class="col-12 col-sm-6">
-                        <img src="img/Lanches/x-costela.png" class="img-thumbnail" id="imgProduto">
+                        <img src="img/Lanches/x-costela.png" alt="Imagem exemplo de um lanche" class="img-thumbnail" id="imgProduto">
                     </div>
                     <div class="col-12 col-sm-6">
                         <h1>X-tudo</h1>
@@ -97,11 +97,12 @@
                             elit officia. Anim duis ullamco cillum nulla voluptate dolore velit ad Lorem adipisicing.
                         </p>
                         <p>
-                            <a href="3-carrinho.html">
+                            <!-- <a href="3-carrinho.html">
                                 <button class="btn btn-lg btn-outline-danger mb-3 mb-xl-0 me-2">
                                     <i class="bi-cart"></i> Adicionar ao Carrinho
                                 </button>
-                            </a>
+                            </a> -->
+                            <button class="btn btn-lg btn-outline-danger mb-3 mb-xl-0 me-2" onclick="window.location.href = '3-carrinho.html'"><i class="bi-cart"></i> Adicionar ao Carrinho</button>
 
                         </p>
                     </div>
