--- a/ProjetoIntegrador/loja.html
+++ b/ProjetoIntegrador/loja.html
@@ -118,14 +118,11 @@
                         </div>
                     </div>
                 </div>
-
-                <hr mt-3="">
-
                 <div class="row g-3">
                     <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
                         <div class="card text-center bg-light">
 
-                            <img src="img/Lanches/chedar-bacon.png" class="card-img-top">
+                            <img src="img/Lanches/chedar-bacon.png" class="card-img-top" alt="imagem exemplo de lanche">
                             <div class="card-header">
                                 R$ 14,50
                             </div>
@@ -145,7 +142,7 @@
                     <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
                         <div class="card text-center bg-light">
 
-                            <img src="img/Lanches/hamburguer.png" class="card-img-top">
+                            <img src="img/Lanches/hamburguer.png" alt="imagem exemplo de lanche" class="card-img-top">
                             <div class="card-header">
                                 R$ 12,50
                             </div>
@@ -165,7 +162,7 @@
                     <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
                         <div class="card text-center bg-light">
 
-                            <img src="img/Lanches/hotdog.png" class="card-img-top">
+                            <img  src="img/Lanches/hotdog.png" alt="imagem exemplo de lanche" class="card-img-top">
                             <div class="card-header">
                                 R$ 12,50
                             </div>
@@ -187,7 +184,7 @@
                     </div>
                     <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
                         <div class="card text-center bg-light">
-                            <img src="img/Lanches/x-bacon.png" class="card-img-top">
+                            <img alt="imagem exemplo de lanche" src="img/Lanches/x-bacon.png" class="card-img-top">
                             <div class="card-header">
                                 R$ 14,50
                             </div>
@@ -209,7 +206,7 @@
                         <div class="card text-center bg-light">
 
                             <a href="produto.html">
-                                <img src="img/Lanches/x-costela.png" class="card-img-top">
+                                <img alt="imagem exemplo de lanche" src="img/Lanches/x-costela.png" class="card-img-top">
                             </a>
                             <div class="card-header">
                                 R$ 16,50
@@ -230,7 +227,7 @@
                     <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
                         <div class="card text-center bg-light">
 
-                            <img src="img/Lanches/x-queijo.png" class="card-img-top">
+                            <img alt="imagem exemplo de lanche" src="img/Lanches/x-queijo.png" class="card-img-top">
                             <div class="card-header">
                                 R$ 14,50
                             </div>
