Finalização das alterações

--- a/ProjetoIntegrador/7-perfil.html
+++ b/ProjetoIntegrador/7-perfil.html
@@ -16,7 +16,7 @@
     <body class="body">
         <!-- Nav-->
         <header>
-            <nav class="navbar navbar-expand-lg navbar-light mb-3 nav-top ">
+            <nav class="navbar navbar-expand-lg navbar-light nav-top ">
                 <div class="container">
                     <a class="navbar-brand" href="postagem.html" target="_blank">
                         <img src="logo.png" alt="Imagem do logo" style=" max-width:200px;max-height:150px">
