--- a/ProjetoIntegrador/9-Esqueceusenha.html
+++ b/ProjetoIntegrador/9-Esqueceusenha.html
@@ -14,7 +14,7 @@
         ><img
           src="logo.png"
           alt="Logo da empresa RangoTop"
-          style="height: 300px"
+          style="height: 150px"
       ></a>
     </header>
     <a href="1-login.html"></a>
@@ -39,7 +39,7 @@
             Enviar
           </button>
           <div class="row1">
-          <a href="1-login.html">
+          <a href="/1.html">
             <p class="submit1">Voltar</p>
           </a>
         </div>
