--- a/ProjetoIntegrador/loja.html
+++ b/ProjetoIntegrador/loja.html
@@ -55,7 +55,7 @@
                     <div class="align-self-end">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a href="2-CNPJ-CPF.html" class="nav-link ">Entrar</a>
+                                <a href="1.html" class="nav-link ">Entrar</a>
                             </li>
                             <li class="nav-item">
                                 <a href="2-CNPJ-CPF.html" class="nav-link ">Cadastrar-se</a>
