--- a/ProjetoIntegrador/termos.html
+++ b/ProjetoIntegrador/termos.html
@@ -59,16 +59,16 @@
                     <div class="align-self-end">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a href="/cadastro.html" class="nav-link text-dark">Quero Me Cadastrar</a>
+                                <a href="/2-CNPJ-CPF.html" class="nav-link text-dark">Quero Me Cadastrar</a>
                             </li>
                             <li class="nav-item">
-                                <a href="/login.html" class="nav-link text-dark">Entrar</a>
+                                <a href="/1.html" class="nav-link text-dark">Entrar</a>
                             </li>
                             <li class="nav-item">
                                 <span class="badge rounded-pill bg-light text-danger position-absolute ms-4 mt-0">
                                     <small>2</small>
                                 </span>
-                                <a href="/carrinho.html" class="nav-link text-dark">
+                                <a href="/3-carrinho.html" class="nav-link text-dark">
                                     <i class="bi-cart" style="font-size:24px;"></i>
                                 </a>
                             </li>
