--- a/ProjetoIntegrador/6-feed.html
+++ b/ProjetoIntegrador/6-feed.html
@@ -86,7 +86,7 @@
 
           <div class="card bg-black-50 border-success mb-3" style="max-width: 100%;">
             <div class="card-header bg-transparent border-black-50">
-              <img class="img-nav img-responsive" src="./imagens/perfil.jpeg" alt="Imagem exemplo de perfil" style="width: 100px;"> zequinha_123
+              <img class="img-nav img-responsive" src="./imagens/perfil.jpeg" alt="Imagem exemplo de perfil" style="width: 100px;"> <a href="/7-perfil.html" id="zeca" >zequinha_123</a>
             </div>
             <div class="card-body text-success" style="max-width: 100%;">
               <h5 class="card-title" style="color: black;">
@@ -116,7 +116,7 @@
 
           <div class="card border-success mb-3" style="max-width: 100%;">
             <div class="card-header bg-transparent border-black-50">
-              <img class="img-nav" src="./imagens/perfil.jpeg" alt="Foto exemplo de perfil" style="width: 100px;"> zequinha_123
+              <img class="img-nav" src="./imagens/perfil.jpeg" alt="Foto exemplo de perfil" style="width: 100px;">  <a href="/7-perfil.html"id="zeca">zequinha_123</a>
             </div>
             <div class="card-body text-success border-black-50" style="max-width: 100%;">
               <h5 class="card-title" style="color: black;">
@@ -143,7 +143,7 @@
           <div class="card border-success mb-3 caio" style="max-width: 100%;">
             <div class="card-header bg-transparent border-black-50">
 
-              <img class="img-nav" src="./imagens/perfil.jpeg" alt="Foto exemplo de perfil" style="width: 100px;"> zequinha_123
+              <img class="img-nav" src="./imagens/perfil.jpeg" alt="Foto exemplo de perfil" style="width: 100px;">  <a href="/7-perfil.html"id="zeca">zequinha_123</a>
             </div>
             <div class="card-body text-success" style="max-width: 100%;">
               <h5 class="card-title" style="color: black;">
@@ -172,7 +172,7 @@
           <div class="card border-success mb-3 caio" style="max-width: 100%;">
             <div class="card-header bg-transparent border-black-50">
 
-              <img class="img-nav" src="./imagens/perfil.jpeg" alt="Foto exemplo de perfil" style="width: 100px;"> zequinha_123
+              <img class="img-nav" src="./imagens/perfil.jpeg" alt="Foto exemplo de perfil" style="width: 100px;"> <a href="/7-perfil.html"id="zeca">zequinha_123</a>
             </div>
             <div class="card-body text-success" style="max-width: 100%;">
               <h5 class="card-title" style="color: black;">
@@ -199,7 +199,7 @@
           <div class="card border-success mb-3 caio" style="max-width: 100%;">
             <div class="card-header bg-transparent border-black-50">
 
-              <img class="img-nav" src="./imagens/perfil.jpeg" alt="Foto exemplo de perfil" style="width: 100px;"> zequinha_123
+              <img class="img-nav" src="./imagens/perfil.jpeg" alt="Foto exemplo de perfil" style="width: 100px;">  <a href="/7-perfil.html"id="zeca">zequinha_123</a>
             </div>
             <div class="card-body text-success" style="max-width: 100%;">
               <h5 class="card-title" style="color: black;">
@@ -227,7 +227,7 @@
           <div class="card border-success mb-3 caio" style="max-width: 100%;">
             <div class="card-header bg-transparent border-black-50">
 
-              <img class="img-nav" src="./imagens/perfil.jpeg" alt="Foto exemplo de perfil" style="width: 100px;"> zequinha_123
+              <img class="img-nav" src="./imagens/perfil.jpeg" alt="Foto exemplo de perfil" style="width: 100px;">  <a href="/7-perfil.html"id="zeca">zequinha_123</a>
             </div>
             <div class="card-body text-success" style="max-width: 100%;">
               <h5 class="card-title" style="color: black;">
@@ -255,7 +255,7 @@
           <div class="card border-success mb-3 caio" style="max-width: 100%;">
             <div class="card-header bg-transparent border-black-50">
 
-              <img class="img-nav" src="./imagens/perfil.jpeg" alt="Foto exemplo de perfil" style="width: 100px;"> zequinha_123
+              <img class="img-nav" src="./imagens/perfil.jpeg" alt="Foto exemplo de perfil" style="width: 100px;">  <a href="/7-perfil.html"id="zeca">zequinha_123</a>
             </div>
             <div class="card-body text-success" style="max-width: 100%;">
               <h5 class="card-title" style="color: black;">
