--- a/ProjetoIntegrador/6-feed.html
+++ b/ProjetoIntegrador/6-feed.html
@@ -93,7 +93,7 @@
                 <img src="./imagens/ft1.jpg" class="card-img-top" style="width: 100%; height: 500px;" alt="...">
                 #Macarrao_na_Chapa
               </h5>
-              <p class="card-text" style="padding-top: 2vh; color: black;"> Almoço de ontem, mais que TOP #aprovadissimo </p>
+              <p class="card-text" style="padding-top: 2vh; color: black;"> Almoço de ontem, mais que TOP <b>#aprovadissimo</b> </p>
             </div>
             <div class="card-footer bg-transparent border-black-50" style="padding: 0">
               <div class="card-body" style="padding: 0;">
