Corrigido o diretorio dos links para outras paginas

--- a/ProjetoIntegrador/2-CNPJ-CPF.html
+++ b/ProjetoIntegrador/2-CNPJ-CPF.html
@@ -7,12 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Rango Top (CPF)</title>
 
-  <link rel="stylesheet" href="CSS/style.css" />
+  <link rel="stylesheet" href="/ProjetoIntegrador/CSS/style.css" />
 </head>
 
 <body>
   <header>
-    <a href="1-login.html"><img src="img/logo-sem-fundo.png" alt="" style="height: 100px" /></a>
+    <a href="/ProjetoIntegrador/1-login.html"><img src="/ProjetoIntegrador/img/logo-sem-fundo.png" alt="" style="height: 100px" /></a>
   </header>
   <div class="container1">
     <div class="form1">
