--- a/ProjetoIntegrador/3-carrinho.html
+++ b/ProjetoIntegrador/3-carrinho.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="/ProjetoIntegrador/CSS/style.css">
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -11,7 +11,7 @@
 
     <title>Carrinho</title>
   </head>
-  <body onload="produtosIniciais()">
+  <body onload="produtosIniciais()" id="car">
     <form method="post" onsubmit="sucesso(); return false;">
     <div class="container">
       <div id="produtosX" class="row">
@@ -99,12 +99,12 @@
               <div class="row">
                 <div class="col-3">
                   <div class="imgProduto">
-                    <img src="img/hotdog.jpg" alt="HotDog">
+                    <img src="/ProjetoIntegrador/img/Lanches/hamburguer.png" alt="X-tudo">
                   </div>
                 </div>
                 <div class="col-5">
                   <p>
-                    Pão, 2 Salsichas, Purê, Batata palha, ketchup, mostarda, maionese
+                    Pão, 2 hamburguer, muito queijo, presunto, 2 ovos, ketchup, mostarda, maionese
                   </p>
                 </div>
                 <div class="col">
