--- a/ProjetoIntegrador/5-configuracao.html
+++ b/ProjetoIntegrador/5-configuracao.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Configuração de conta</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">    
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="/ProjetoIntegrador/CSS/style.css">
 </head>
 <body>
     <header>
-        <a href="1-login.html"><img src="/logo.png" alt="Logo da empresa RangoTop" style="height: 200px;"></a>
+        <a href="/ProjetoIntegrador/1.html"><img src="/ProjetoIntegrador/logo.png" alt="Logo da empresa RangoTop" style="height: 200px;"></a>
     </header>
     <h1 class=" d-flex align-self-center justify-content-center">Configuração da conta</h1>
         <div class="div-foto-perfil  d-flex align-self-center justify-content-center">
