--- a/ProjetoIntegrador/6-feed.html
+++ b/ProjetoIntegrador/6-feed.html
@@ -15,9 +15,9 @@
 
 
   <title>Rango TOP (feed/principal)</title>
-  <link rel="stylesheet" href="CSS/estilo_feed.css">
-  <link rel="stylesheet" href="CSS/estilo1.css">
-  <link rel="stylesheet" href="CSS/formatacao.css">
+  <link rel="stylesheet" href="/ProjetoIntegrador/CSS/estilo_feed.css">
+  <link rel="stylesheet" href="/ProjetoIntegrador/CSS/estilo1.css">
+  <link rel="stylesheet" href="/ProjetoIntegrador/CSS/formatacao.css">
   <style>
     body{
       overflow: hidden !important;
@@ -29,10 +29,10 @@
 <body>
   <div>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light  nav-top ">
+      <nav class="navbar navbar-expand-lg navbar-light nav-top ">
         <div class="container">
           <div class="img-size">
-            <a class="navbar-brand" href="6-feed.html" ><img src="/logo.png" alt="imagem do logo" style="height: 100px;
+            <a class="navbar-brand" href="/ProjetoIntegrador/6-feed.html" ><img src="/ProjetoIntegrador/logo.png" style="height: 100px;
               width: 100px;"></a>
           </div>
             <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-expanded="false">
@@ -52,23 +52,23 @@
                             </form>
                         </li>
                         <li class="nav-item" style="padding: 5px 5px;">
-                            <a href="6-feed.html" style="text-decoration: none; color: red;">
+                            <a href="/ProjetoIntegrador/6-feed.html" style="text-decoration: none; color: red;">
                                 <i class="bi bi-house-door icons"></i></a>
                         </li>
                         <li class="nav-item" style="padding: 5px 5px;">
-                            <a href="loja.html" style="text-decoration: none; color: rgb(0, 0, 0);">
+                            <a href="/ProjetoIntegrador/loja.html" style="text-decoration: none; color: rgb(0, 0, 0);">
                                 <i class="bi bi-shop icons"></i></a>
                         </li>
                         
                         <li class="nav-item" style="padding: 5px 5px;">
-                            <a href="#" style="text-decoration: none; color: red;">
+                            <a href="./feed1.html" style="text-decoration: none; color: red;">
                                 <i class="bi bi-camera icons"></i></a>
                         </li>
                         <li class="nav-item mt-1">
-                            <a href="5-configuracao.html" style="text-decoration: none; color: rgb(0, 0, 0); padding: 5px 5px;"><i class="bi bi-gear icons"></i></a>
+                            <a href="./config.html" style="text-decoration: none; color: rgb(0, 0, 0); padding: 5px 5px;"><i class="bi bi-gear icons"></i></a>
                         </li>
                         <li class="nav-item mt-1">
-                            <a href="#" style="text-decoration: none; color: red; padding: 5px 5px;">
+                            <a href="./config.html" style="text-decoration: none; color: red; padding: 5px 5px;">
                                 <i class="bi bi-chat-dots icons"></i></a>
 
                         </li>
@@ -86,7 +86,7 @@
 
           <div class="card bg-black-50 border-success mb-3" style="max-width: 100%;">
             <div class="card-header bg-transparent border-black-50">
-              <img class="img-nav img-responsive" src="./imagens/perfil.jpeg" alt="Imagem exemplo de perfil" style="width: 100px;"> <a href="/7-perfil.html" id="zeca" >zequinha_123</a>
+              <img class="img-nav img-responsive" src="./imagens/perfil.jpeg" style="width: 100px;"> zequinha_123
             </div>
             <div class="card-body text-success" style="max-width: 100%;">
               <h5 class="card-title" style="color: black;">
@@ -116,7 +116,7 @@
 
           <div class="card border-success mb-3" style="max-width: 100%;">
             <div class="card-header bg-transparent border-black-50">
-              <img class="img-nav" src="./imagens/perfil.jpeg" alt="Foto exemplo de perfil" style="width: 100px;">  <a href="/7-perfil.html"id="zeca">zequinha_123</a>
+              <img class="img-nav" src="./imagens/perfil.jpeg" style="width: 100px;"> zequinha_123
             </div>
             <div class="card-body text-success border-black-50" style="max-width: 100%;">
               <h5 class="card-title" style="color: black;">
@@ -143,7 +143,7 @@
           <div class="card border-success mb-3 caio" style="max-width: 100%;">
             <div class="card-header bg-transparent border-black-50">
 
-              <img class="img-nav" src="./imagens/perfil.jpeg" alt="Foto exemplo de perfil" style="width: 100px;">  <a href="/7-perfil.html"id="zeca">zequinha_123</a>
+              <img class="img-nav" src="./imagens/perfil.jpeg" style="width: 100px;"> zequinha_123
             </div>
             <div class="card-body text-success" style="max-width: 100%;">
               <h5 class="card-title" style="color: black;">
@@ -172,7 +172,7 @@
           <div class="card border-success mb-3 caio" style="max-width: 100%;">
             <div class="card-header bg-transparent border-black-50">
 
-              <img class="img-nav" src="./imagens/perfil.jpeg" alt="Foto exemplo de perfil" style="width: 100px;"> <a href="/7-perfil.html"id="zeca">zequinha_123</a>
+              <img class="img-nav" src="./imagens/perfil.jpeg" style="width: 100px;"> zequinha_123
             </div>
             <div class="card-body text-success" style="max-width: 100%;">
               <h5 class="card-title" style="color: black;">
@@ -199,7 +199,7 @@
           <div class="card border-success mb-3 caio" style="max-width: 100%;">
             <div class="card-header bg-transparent border-black-50">
 
-              <img class="img-nav" src="./imagens/perfil.jpeg" alt="Foto exemplo de perfil" style="width: 100px;">  <a href="/7-perfil.html"id="zeca">zequinha_123</a>
+              <img class="img-nav" src="./imagens/perfil.jpeg" style="width: 100px;"> zequinha_123
             </div>
             <div class="card-body text-success" style="max-width: 100%;">
               <h5 class="card-title" style="color: black;">
@@ -227,7 +227,7 @@
           <div class="card border-success mb-3 caio" style="max-width: 100%;">
             <div class="card-header bg-transparent border-black-50">
 
-              <img class="img-nav" src="./imagens/perfil.jpeg" alt="Foto exemplo de perfil" style="width: 100px;">  <a href="/7-perfil.html"id="zeca">zequinha_123</a>
+              <img class="img-nav" src="./imagens/perfil.jpeg" style="width: 100px;"> zequinha_123
             </div>
             <div class="card-body text-success" style="max-width: 100%;">
               <h5 class="card-title" style="color: black;">
@@ -255,7 +255,7 @@
           <div class="card border-success mb-3 caio" style="max-width: 100%;">
             <div class="card-header bg-transparent border-black-50">
 
-              <img class="img-nav" src="./imagens/perfil.jpeg" alt="Foto exemplo de perfil" style="width: 100px;">  <a href="/7-perfil.html"id="zeca">zequinha_123</a>
+              <img class="img-nav" src="./imagens/perfil.jpeg" style="width: 100px;"> zequinha_123
             </div>
             <div class="card-body text-success" style="max-width: 100%;">
               <h5 class="card-title" style="color: black;">
