--- a/ProjetoIntegrador/9-Esqueceusenha.html
+++ b/ProjetoIntegrador/9-Esqueceusenha.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Rango Top</title>
-    <link rel="stylesheet" href="/CSS/style.css" >
+    <link rel="stylesheet" href="/ProjetoIntegrador/CSS/style.css" >
     <script src="JS/cliente.js"></script>
   </head>
   <body id="body-9">
@@ -17,7 +17,7 @@
           style="height: 150px"
       ></a>
     </header>
-    <a href="1-login.html"></a>
+    <a href="/ProjetoIntegrador/1.html"></a>
     <div class="container3">
       <div class="form3 text-esqueceu">
         <h2 class="title3">Esqueceu sua senha?</h2>
@@ -39,7 +39,7 @@
             Enviar
           </button>
           <div class="row1">
-          <a href="/1.html">
+          <a href="/ProjetoIntegrador/1.html">
             <p class="submit1">Voltar</p>
           </a>
         </div>
