--- a/ProjetoIntegrador/privacidade.html
+++ b/ProjetoIntegrador/privacidade.html
@@ -28,6 +28,11 @@
             background: rgb(237, 183, 33);
             background: linear-gradient(0deg, rgba(237, 183, 33, 0.5466387238489145) 0%, rgba(255, 255, 255, 1) 100%);
         }
+        body a{
+            text-decoration: none;
+            font-weight: 700;
+            color: black;
+        }
     </style>
 </head>
 
