--- a/ProjetoIntegrador/termos.html
+++ b/ProjetoIntegrador/termos.html
@@ -5,16 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/img/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/img/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
-    <link rel="manifest" href="/img/manifest.json">
+    <link rel="icon" type="image/png" sizes="192x192" href="/ProjetoIntegrador/img/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/ProjetoIntegrador/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/ProjetoIntegrador/img/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/ProjetoIntegrador/img/favicon-16x16.png">
+    <link rel="manifest" href="/ProjetoIntegrador/img/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/img/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="node_modules/bootstrap-icons/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="/ProjetoIntegrador/node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/ProjetoIntegrador/node_modules/bootstrap-icons/font/bootstrap-icons.css">
     <title>Top Burguer :: Termos de uso</title>
     <style>
         .nav-top {
@@ -28,6 +28,11 @@
             background: rgb(237, 183, 33);
             background: linear-gradient(0deg, rgba(237, 183, 33, 0.5466387238489145) 0%, rgba(255, 255, 255, 1) 100%);
             font-size: 14pt;
+        }
+        body a{
+            text-decoration: none;
+            font-weight: 700;
+            color: black;
         }
 
         .wrapper {
@@ -50,25 +55,25 @@
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link active text-dark" href="/index.html">Principal</a>
+                            <a class="nav-link active text-dark" href="/ProjetoIntegrador/loja.html">Principal</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="contato.html">Contato</a>
+                            <a class="nav-link text-dark" href="/ProjetoIntegrador/contato.html">Contato</a>
                         </li>
                     </ul>
                     <div class="align-self-end">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a href="/2-CNPJ-CPF.html" class="nav-link text-dark">Quero Me Cadastrar</a>
+                                <a href="/ProjetoIntegrador/2-CNPJ-CPF.html" class="nav-link text-dark">Quero Me Cadastrar</a>
                             </li>
                             <li class="nav-item">
-                                <a href="/1.html" class="nav-link text-dark">Entrar</a>
+                                <a href="/ProjetoIntegrador/1.html" class="nav-link text-dark">Entrar</a>
                             </li>
                             <li class="nav-item">
                                 <span class="badge rounded-pill bg-light text-danger position-absolute ms-4 mt-0">
                                     <small>2</small>
                                 </span>
-                                <a href="/3-carrinho.html" class="nav-link text-dark">
+                                <a href="/ProjetoIntegrador/3-carrinho.html" class="nav-link text-dark">
                                     <i class="bi-cart" style="font-size:24px;"></i>
                                 </a>
                             </li>
@@ -81,7 +86,7 @@
         <main class="flex-fill">
             <div class="container">
                 <h2><span style="color: rgb(68, 68, 68);">1. Termos</span></h2>
-                <p><span style="color: rgb(68, 68, 68);">Ao acessar ao site <a href="index.html">Top Burguer</a>,
+                <p><span style="color: rgb(68, 68, 68);">Ao acessar ao site <a href="/ProjetoIntegrador/6-feed.html">Top Burguer</a>,
                         concorda em cumprir estes termos de serviço, todas as leis e regulamentos aplicáveis ​​e
                         concorda que é responsável pelo cumprimento de todas as leis locais aplicáveis. Se você não
                         concordar com algum desses termos, está proibido de usar ou acessar este site. Os materiais
@@ -159,9 +164,9 @@
                         CNPJ 42.424.242/4242-42
                     </div>
                     <div class="col-12 col-md-4 text-center">
-                        <a href="privacidade.html" class="text-decoration-none text-dark">Polítca de Privacidade</a><br>
-                        <a href="termos.html" class="text-decoration-none text-dark">Termos de uso</a><br>
-                        <a href="quemsomos.html" class="text-decoration-none text-dark">Quem Somos</a><br>
+                        <a href="/ProjetoIntegrador/privacidade.html" class="text-decoration-none text-dark">Polítca de Privacidade</a><br>
+                        <a href="/ProjetoIntegrador/termos.html" class="text-decoration-none text-dark">Termos de uso</a><br>
+                        <a href="/ProjetoIntegrador/quemsomos.html" class="text-decoration-none text-dark">Quem Somos</a><br>
                     </div>
                     <div class="col-12 col-md-4 text-center">
                         <a href="#" class="text-decoration-none text-dark">
