--- a/ProjetoIntegrador/1.html
+++ b/ProjetoIntegrador/1.html
@@ -7,8 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/CSS/estilo.css">
-    <link rel="stylesheet" href="/CSS/estilo-loja.css">
+    <link rel="stylesheet" href="/ProjetoIntegrador/CSS/estilo.css">
+    <link rel="stylesheet" href="/ProjetoIntegrador/CSS/estilo-loja.css">
 </head>
   <body>
     <!--<div class="scroll">
@@ -20,16 +20,16 @@
         <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="/logo.png" class="d-block w-100" alt="...">
+                <img src="/ProjetoIntegrador/logo.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item ">
-                <img src="/imagens/ft1.jpg" class="d-block w-100" alt="...">
+                <img src="/ProjetoIntegrador/imagens/ft1.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="/imagens/ft2.jpg" class="d-block w-100" alt="...">
+                <img src="/ProjetoIntegrador/imagens/ft2.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="/imagens/ft4.jpg" class="d-block w-100" alt="...">
+                <img src="/ProjetoIntegrador/imagens/ft4.jpg" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
