--- a/ProjetoIntegrador/contato.html
+++ b/ProjetoIntegrador/contato.html
@@ -5,16 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/img/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/img/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
-    <link rel="manifest" href="/img/manifest.json">
+    <link rel="icon" type="image/png" sizes="192x192" href="/ProjetoIntegrador/img/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/ProjetoIntegrador/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/ProjetoIntegrador/img/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/ProjetoIntegrador/img/favicon-16x16.png">
+    <link rel="manifest" href="/ProjetoIntegrador/img/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/img/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/node_modules/bootstrap-icons/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="/ProjetoIntegrador/node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/ProjetoIntegrador/node_modules/bootstrap-icons/font/bootstrap-icons.css">
     <title>Top Burguer</title>
     <style>
         .nav-top {
@@ -46,7 +46,7 @@
     <div class="d-flex flex-column wrapper">
         <nav class="navbar navbar-expand-lg navbar-dark  mb-3">
             <div class="container">
-                <a class="navbar-brand text-dark" href="loja.html">
+                <a class="navbar-brand text-dark" href="/ProjetoIntegrador/loja.html">
                     <strong>Top Burguer : : Contato</strong>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse">
@@ -56,25 +56,25 @@
                 <div class="collapse navbar-collapse text-dark">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link active text-dark" href="loja.html">Principal</a>
+                            <a class="nav-link active text-dark" href="/ProjetoIntegrador/loja.html">Principal</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="contato.html">Contato</a>
+                            <a class="nav-link text-dark" href="/ProjetoIntegrador/contato.html">Contato</a>
                         </li>
                     </ul>
                     <div class="align-self-end">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a href="2-CNPJ-CPF.html" class="nav-link text-dark">Quero Me Cadastrar</a>
+                                <a href="/ProjetoIntegrador/2-CNPJ-CPF.html" class="nav-link text-dark">Quero Me Cadastrar</a>
                             </li>
                             <li class="nav-item">
-                                <a href="1.html" class="nav-link text-dark">Entrar</a>
+                                <a href="/ProjetoIntegrador/1.html" class="nav-link text-dark">Entrar</a>
                             </li>
                             <li class="nav-item">
                                 <span class="badge rounded-pill bg-light text-danger position-absolute ms-4 mt-0">
                                     <small>2</small>
                                 </span>
-                                <a href="/3-carrinho.html" class="nav-link">
+                                <a href="/ProjetoIntegrador/3-carrinho.html" class="nav-link">
                                     <i class="bi-cart" style="font-size:24px; color: #000000;"></i>
                                 </a>
                             </li>
