--- a/ProjetoIntegrador/loja.html
+++ b/ProjetoIntegrador/loja.html
@@ -5,16 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/img/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/img/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/ProjetoIntegrador/img/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/ProjetoIntegrador/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/ProjetoIntegrador/img/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/ProjetoIntegrador/img/favicon-16x16.png">
     <link rel="manifest" href="/img/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/img/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/node_modules/bootstrap-icons/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="/ProjetoIntegrador/node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/ProjetoIntegrador/node_modules/bootstrap-icons/font/bootstrap-icons.css">
     <title>Top Burguer</title>
     <style>
         .nav-top {
@@ -27,7 +27,6 @@
             background: rgb(237, 183, 33);
             background: linear-gradient(0deg, rgba(237, 183, 33, 0.5466387238489145) 0%, rgba(255, 255, 255, 1) 100%);
             color: black !important;
-            overflow: hidden !important;
         }
     </style>
 </head>
@@ -85,7 +84,7 @@
                         </form>
                     </div>
                     <div class="col-12 col-md-7">
-                        <div class="d-flex flex-row-reverse justify-content-center justify-content-md-start">
+                        <div class="d-flex flex-row-reverse justify-content-center mb-3 justify-content-md-start">
                             <form class="d-inline-block">
                                 <select class="form-select form-select-sm">
                                     <option>Ordenar pelo nome</option>
