--- a/ProjetoIntegrador/produto.html
+++ b/ProjetoIntegrador/produto.html
@@ -5,16 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/img/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/img/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
-    <link rel="manifest" href="/img/manifest.json">
+    <link rel="icon" type="image/png" sizes="192x192" href="/ProjetoIntegrador/img/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/ProjetoIntegrador/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/ProjetoIntegrador/img/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/ProjetoIntegrador/img/favicon-16x16.png">
+    <link rel="manifest" href="/ProjetoIntegrador/img/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/img/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="node_modules/bootstrap-icons/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="/ProjetoIntegrador/node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/ProjetoIntegrador/node_modules/bootstrap-icons/font/bootstrap-icons.css">
     <title>Top Burguer :: Produto</title>
     <style>
         .nav-top {
@@ -39,7 +39,7 @@
     <div class="d-flex flex-column wrapper ">
         <nav class="navbar navbar-expand-lg navbar-dark nav-top mb-3">
             <div class="container">
-                <a class="navbar-brand text-dark" href="loja.html">
+                <a class="navbar-brand text-dark" href="/ProjetoIntegrador/loja.html">
                     <strong>Top Burguer</strong>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -49,25 +49,25 @@
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link active text-dark" href="loja.html">Principal</a>
+                            <a class="nav-link active text-dark" href="/ProjetoIntegrador/loja.html">Principal</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="contato.html">Contato</a>
+                            <a class="nav-link text-dark" href="/ProjetoIntegrador/contato.html">Contato</a>
                         </li>
                     </ul>
                     <div class="align-self-end">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a href="/2-CNPJ-CPF.html" class="nav-link text-dark">Quero Me Cadastrar</a>
+                                <a href="/ProjetoIntegrador/2-CNPJ-CPF.html" class="nav-link text-dark">Quero Me Cadastrar</a>
                             </li>
                             <li class="nav-item">
-                                <a href="/1.html" class="nav-link text-dark">Entrar</a>
+                                <a href="/ProjetoIntegrador/1.html" class="nav-link text-dark">Entrar</a>
                             </li>
                             <li class="nav-item">
                                 <span class="badge rounded-pill bg-light text-danger position-absolute ms-4 mt-0">
                                     <small>2</small>
                                 </span>
-                                <a href="/3-carrinho.html" class="nav-link text-dark">
+                                <a href="/ProjetoIntegrador/3-carrinho.html" class="nav-link text-dark">
                                     <i class="bi-cart" style="font-size:24px;"></i>
                                 </a>
                             </li>
@@ -84,25 +84,18 @@
                         <img src="img/Lanches/x-costela.png" alt="Imagem exemplo de um lanche" class="img-thumbnail" id="imgProduto">
                     </div>
                     <div class="col-12 col-sm-6">
-                        <h1>X-tudo</h1>
+                        <h1>X-Costela</h1>
                         <p>
-                            Quis officia irure deserunt reprehenderit sunt non ut amet. Sunt veniam cillum aliqua. Elit
-                            labore duis laboris reprehenderit laborum magna velit dolor veniam sint.
+                           Costela defumada e assada de forma lenta em brasa, com queijo chedar em grande quantidade absurda, com bacon frito, em meio a um pão Briochi
                         </p>
-                        <p>
-                            Do ut ad quis et qui qui tempor do irure laborum ullamco excepteur. Adipisicing ipsum ad
-                            excepteur sit ipsum adipisicing. Ut ut elit proident fugiat. Ad deserunt et consequat
-                            aliquip nisi ut dolore sit ut veniam fugiat culpa nulla. Consequat eiusmod ad deserunt ad
-                            sunt adipisicing deserunt nulla est cupidatat commodo do. Minim aliquip dolor in deserunt
-                            elit officia. Anim duis ullamco cillum nulla voluptate dolore velit ad Lorem adipisicing.
-                        </p>
+                        
                         <p>
                             <!-- <a href="3-carrinho.html">
                                 <button class="btn btn-lg btn-outline-danger mb-3 mb-xl-0 me-2">
                                     <i class="bi-cart"></i> Adicionar ao Carrinho
                                 </button>
                             </a> -->
-                            <button class="btn btn-lg btn-outline-danger mb-3 mb-xl-0 me-2" onclick="window.location.href = '3-carrinho.html'"><i class="bi-cart"></i> Adicionar ao Carrinho</button>
+                            <button class="btn btn-lg btn-danger mb-3 mb-xl-0 me-2" onclick="window.location.href = '3-carrinho.html'"><i class="bi-cart"></i> Adicionar ao Carrinho</button>
 
                         </p>
                     </div>
@@ -119,9 +112,9 @@
                         CNPJ 42.424.242/4242-42
                     </div>
                     <div class="col-12 col-md-4 text-center">
-                        <a href="privacidade.html" class="text-decoration-none text-dark">Polítca de Privacidade</a><br>
-                        <a href="termos.html" class="text-decoration-none text-dark">Termos de uso</a><br>
-                        <a href="quemsomos.html" class="text-decoration-none text-dark">Quem Somos</a><br>
+                        <a href="/ProjetoIntegrador/privacidade.html" class="text-decoration-none text-dark">Polítca de Privacidade</a><br>
+                        <a href="/ProjetoIntegrador/termos.html" class="text-decoration-none text-dark">Termos de uso</a><br>
+                        <a href="/ProjetoIntegrador/quemsomos.html" class="text-decoration-none text-dark">Quem Somos</a><br>
                     </div>
                     <div class="col-12 col-md-4 text-center">
                         <a href="#" class="text-decoration-none text-dark">
